--- a/cadastro.html
+++ b/cadastro.html
@@ -22,11 +22,12 @@
                     <h2>ABRA SUA CONTA</h2>
                     <label for="CPF">Digite seu CPF</label>
                     <input type="text" name="CPF">
+                    <button class="btn_cadastro">Cadastrar</button>
                 </div>   
-                <h2></h2>
-
-        
             </div> 
+            <div class="img_cadastro">
+                <img src="un.svg" alt="imagem banco">
+            </div>
               
 </body>
 </html>
