--- a/cadastro.html
+++ b/cadastro.html
@@ -17,17 +17,19 @@
             </ul>
         </div>
     </header> 
-            <div class="cadastro">
+        <div>
+                <div class="cadastro">
                 <div class="input-field">  
                     <h2>ABRA SUA CONTA</h2>
                     <label for="CPF">Digite seu CPF</label>
                     <input type="text" name="CPF">
                     <button class="btn_cadastro">Cadastrar</button>
-                </div>   
+                </div> 
+                </div>
+                    <div class="img_cadastro">
+                    <img src="un.svg" alt="imagem banco">
             </div> 
-            <div class="img_cadastro">
-                <img src="un.svg" alt="imagem banco">
-            </div>
+        </div>
               
 </body>
 </html>
