começo tela 1 cadastro

--- a/cadastro1.html
+++ b/cadastro1.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-    
+<div class="tela"> 
+    <div class="cadastro">
+                    
+        <form action="">
+        <div class="input-field">  
+            <h1 class="h1">ABRA SUA CONTA</h1><br>
+            <input required type="text" name="CPF" id="CPF" class="input">
+            <label for="CPF">Digite seu CPF</label>
+        </div> 
+        </form>
+        <br>
+        <button class="btn_cadastro">Cadastrar</button> 
+    </div>
+</div>
 </body>
 </html>
