setinha pa direita

--- a/cadastro.html
+++ b/cadastro.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -75,7 +76,7 @@
                         </td>
                         <td>
                             <div class="btn_next">
-                                <a class="btn_seta">-></a>
+                                <a class="btn_seta"><i class='bx bxs-chevron-right'></i></a>
                             </div>
                         </td>       
                         </tr>
