ajuste dos botões

--- a/cadastro.html
+++ b/cadastro.html
@@ -66,12 +66,13 @@
                         <option value="O">Outros</option>
                     </select>
                 </div>
+                <br><br><br>
                 <div class="btn_navigation">
                     <table>
                         <tr>
                         <td>
                             <div>
-                                <a onclick="teste()" class="btn_seta"><-</a>
+                                <a onclick="teste()" class="btn_seta"><i class='bx bx-chevron-left'></i></a>
                             </div>
                         </td>
                         <td>
